--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "chatapp",
+  "name": "blynkapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "A real-time texting MERN app",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon backend/server.js"
+    "server": "nodemon backend/server.js",
+    "start": "node backend/server.js",
+    "build": "npm install && npm install --prefix fontend && npm run build --prefix frontend"
   },
   "type": "module",
   "keywords": [],
